package customerManagement.domain;

public class Customer {
}
